--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-community/image-editor": "^4.3.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-vector-icons/evil-icons": "^12.0.1",
     "@react-native-vector-icons/fontawesome6": "^12.0.1",
@@ -23,13 +24,19 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
+    "buffer": "^6.0.3",
     "lottie-react-native": "^7.2.4",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-blob-util": "^0.22.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-crop-picker": "^0.50.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
